objects/Opportunity_Partner__c.object
<CustomObject>
    <fields>
        <fullName>Account_GamCode__c</fullName>
        <formula>Account__r.GAMCD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account GamCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>CM, Distributor, OEM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Partners</relationshipLabel>
        <relationshipName>Opportunity_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocation__c</fullName>
        <label>Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created_Date__c</fullName>
        <formula>DATEVALUE(Opportunity__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity__r.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Id__c</fullName>
        <formula>CASESAFEID(Opportunity__r.Owner.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName + &apos; &apos; +  Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Partners</relationshipLabel>
        <relationshipName>Opportunity_Partners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_AM_GIBU__c</fullName>
        <formula>CASE( Account__r.Account_Manager__r.GIBU__c ,&apos;Appliances&apos;,&apos;Appliances&apos;,&apos;Consumer Devices&apos;,&apos;Consumer Devices&apos;,&apos;DataComm&apos;,&apos;DataComm&apos;,&apos;Industrial&apos;,&apos;Industrial&apos;,&apos;Channel&apos;,&apos;Channel&apos;,&apos;TEIS&apos;,&apos;TEIS&apos;,&apos;Relays&apos;,&apos;Relays&apos;,&apos;Medical&apos;,&apos;Medical&apos;,&apos;Data &amp; Devices&apos;,&apos;Data &amp; Devices&apos;,&apos;Other&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner AM GIBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_AM_ID__c</fullName>
        <formula>CASESAFEID(Account__r.Account_Manager__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner AM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_AM_Profile_Name__c</fullName>
        <formula>Account__r.Account_Manager__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner AM Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Manager__c</fullName>
        <formula>Account__r.Account_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Number__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>Account Information for the selected Partner Account</description>
        <formula>Account__r.Account_Combined_Data__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Information for the selected Partner Account</inlineHelpText>
        <label>Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Country__c</fullName>
        <formula>Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_GAM_Code__c</fullName>
        <formula>IF(CONTAINS(&apos;G289;G077;G403;G035;G076;G288;G264;G287;G039;&apos;, Account__r.GAMCD__c),Account__r.GAMCD__c,&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APL Partner GAM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Region__c</fullName>
        <formula>Account__r.Customer_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Role__c</fullName>
        <label>Partner Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Contractor (Electrical)</fullName>
                </value>
                <value>
                    <fullName>Contractor (General)</fullName>
                </value>
                <value>
                    <fullName>Owner / Developer</fullName>
                </value>
                <value>
                    <fullName>Engineer / Architect</fullName>
                </value>
                <value>
                    <fullName>Engineer / Procurement / Construction</fullName>
                </value>
                <value>
                    <fullName>Rep Firm</fullName>
                </value>
                <value>
                    <fullName>VAD (Value Added Distributor)</fullName>
                </value>
                <value>
                    <fullName>Utility - IOU</fullName>
                </value>
                <value>
                    <fullName>Utility - Municipal</fullName>
                </value>
                <value>
                    <fullName>Utility - Cooperative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Street__c</fullName>
        <formula>Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,IMAGE(&quot;/img/icon/tasks16.gif&quot;,&quot;View&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Within_S_OP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Within S&amp;OP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAPLOpp__c</fullName>
        <formula>Opportunity__r.isAPLOpp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isAPLOpp</label>
        <type>Checkbox</type>
    </fields>
    <label>Opportunity Partner</label>
    <nameField>
        <displayFormat>OP-{000000}</displayFormat>
        <label>Opportunity Partner</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>